--- a/Views/SettingsView.xaml
+++ b/Views/SettingsView.xaml
@@ -137,6 +137,42 @@
                                      Padding="5"/>
                         </StackPanel>
                     </GroupBox>
+
+                    <GroupBox Header="Gambar" Margin="0,0,0,20" Foreground="White">
+                        <StackPanel>
+                            <TextBlock Text="Product Image Path" FontSize="14" Margin="0,10,0,5" Foreground="White"/>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+                                <TextBox Grid.Column="0" Text="{Binding ProductImagePath}" 
+                                         FontSize="12" 
+                                         Padding="5" 
+                                         Margin="0,0,10,0"/>
+                                <Button Grid.Column="1" Content="Pilih" 
+                                        Command="{Binding BrowseProductImageCommand}" 
+                                        Width="60" 
+                                        Height="30"/>
+                            </Grid>
+
+                            <TextBlock Text="Main Background Image Path" FontSize="14" Margin="0,10,0,5" Foreground="White"/>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+                                <TextBox Grid.Column="0" Text="{Binding MainBackgroundImagePath}" 
+                                         FontSize="12" 
+                                         Padding="5" 
+                                         Margin="0,0,10,0"/>
+                                <Button Grid.Column="1" Content="Pilih" 
+                                        Command="{Binding BrowseMainBackgroundImageCommand}" 
+                                        Width="60" 
+                                        Height="30"/>
+                            </Grid>
+                        </StackPanel>
+                    </GroupBox>
                 </StackPanel>
 
                 <!-- Middle Column -->
