--- a/Views/VoucherPaymentPage.xaml
+++ b/Views/VoucherPaymentPage.xaml
@@ -76,42 +76,50 @@
         </Grid>
 
         <!-- Main Content -->
-        <Border Grid.Row="1" 
+        <Grid Grid.Row="1">
+            <Border 
                 Background="White"
                 BorderBrush="#F2F0E4" 
                 BorderThickness="2" 
-                CornerRadius="10" 
-                Padding="30" 
-                Margin="40,20">
-            <StackPanel VerticalAlignment="Center">
-                <TextBlock Text="Masukkan Kode Voucher" 
-                           FontSize="20" 
-                           FontWeight="SemiBold" 
-                           Foreground="#333333" 
-                           HorizontalAlignment="Center"
-                           Margin="0,0,0,20"/>
+                CornerRadius="20" 
+                Width="500"
+                Height="400"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Center">
+                <Border.Effect>
+                    <DropShadowEffect ShadowDepth="5" Direction="315" Color="Black" Opacity="0.5" BlurRadius="10"/>
+                </Border.Effect>
+                <StackPanel VerticalAlignment="Center" Margin="30">
+                    <TextBlock Text="Masukkan Kode Voucher" 
+                               FontSize="28" 
+                               FontWeight="Bold" 
+                               Foreground="#333333" 
+                               HorizontalAlignment="Center"
+                               Margin="0,0,0,30"/>
 
-                <TextBox Text="{Binding VoucherCode}" 
-                         FontSize="24" 
-                         Width="300"
-                         Height="50"
-                         VerticalContentAlignment="Center"
-                         HorizontalContentAlignment="Center"
-                         Margin="0,0,0,30"/>
+                    <TextBox Text="{Binding VoucherCode}" 
+                             FontSize="24" 
+                             Width="300"
+                             Height="50"
+                             VerticalContentAlignment="Center"
+                             HorizontalContentAlignment="Center"
+                             Margin="0,0,0,30"/>
 
-                <Button Content="Validasi Voucher" 
-                        Command="{Binding ValidateVoucherCommand}" 
-                        Style="{StaticResource EllipticalButtonStyle}" 
-                        Margin="0,0,0,20"/>
+                    <Button Content="Validasi Voucher" 
+                            Command="{Binding ValidateVoucherCommand}" 
+                            Style="{StaticResource EllipticalButtonStyle}" 
+                            Margin="0,0,0,30"/>
 
-                <TextBlock Text="{Binding ValidationResult}" 
-                           FontSize="18" 
-                           FontWeight="SemiBold"
-                           Foreground="{Binding ValidationResultColor}"
-                           TextAlignment="Center"
-                           Margin="0,10"/>
-            </StackPanel>
-        </Border>
+                    <TextBlock Text="{Binding ValidationResult}" 
+                               FontSize="20" 
+                               FontWeight="SemiBold"
+                               Foreground="{Binding ValidationResultColor}"
+                               TextAlignment="Center"
+                               Margin="0,10"
+                               TextWrapping="Wrap"/>
+                </StackPanel>
+            </Border>
+        </Grid>
 
         <!-- Footer -->
         <Border Grid.Row="2" Background="#F2F0E4" Padding="20">
