--- a/Views/SettingsView.xaml
+++ b/Views/SettingsView.xaml
@@ -98,23 +98,19 @@
 
                 <!-- Left Column -->
                 <StackPanel Grid.Column="0" Margin="10">
-                    <GroupBox Header="Aplikasi" Margin="0,0,0,20" Foreground="White">
+                    <GroupBox Header="MQTT" Margin="0,0,0,20" Foreground="White">
                         <StackPanel>
-                            <TextBlock Text="DSLR Booth Path" FontSize="14" Margin="0,10,0,5" Foreground="White"/>
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="Auto"/>
-                                </Grid.ColumnDefinitions>
-                                <TextBox Grid.Column="0" Text="{Binding DSLRBoothPath}" 
-                                         FontSize="12" 
-                                         Padding="5" 
-                                         Margin="0,0,10,0"/>
-                                <Button Grid.Column="1" Content="Pilih" 
-                                        Command="{Binding BrowseDSLRBoothPathCommand}" 
-                                        Width="60" 
-                                        Height="30"/>
-                            </Grid>
+                            <TextBlock Text="MQTT Host" FontSize="14" Margin="0,10,0,5" Foreground="White"/>
+                            <TextBlock Text="{Binding MqttHost}" FontSize="12" Margin="0,0,0,10" Foreground="LightGray"/>
+
+                            <TextBlock Text="MQTT Port" FontSize="14" Margin="0,10,0,5" Foreground="White"/>
+                            <TextBlock Text="{Binding MqttPort}" FontSize="12" Margin="0,0,0,10" Foreground="LightGray"/>
+
+                            <TextBlock Text="MQTT Username" FontSize="14" Margin="0,10,0,5" Foreground="White"/>
+                            <TextBlock Text="{Binding MqttUsername}" FontSize="12" Margin="0,0,0,10" Foreground="LightGray"/>
+
+                            <TextBlock Text="MQTT Password" FontSize="14" Margin="0,10,0,5" Foreground="White"/>
+                            <TextBlock Text="********" FontSize="12" Margin="0,0,0,10" Foreground="LightGray"/>
                         </StackPanel>
                     </GroupBox>
 
@@ -144,19 +140,23 @@
 
                 <!-- Right Column -->
                 <StackPanel Grid.Column="1" Margin="10">
-                    <GroupBox Header="MQTT" Margin="0,0,0,20" Foreground="White">
+                    <GroupBox Header="Aplikasi" Margin="0,0,0,20" Foreground="White">
                         <StackPanel>
-                            <TextBlock Text="MQTT Host" FontSize="14" Margin="0,10,0,5" Foreground="White"/>
-                            <TextBlock Text="{Binding MqttHost}" FontSize="12" Margin="0,0,0,10" Foreground="LightGray"/>
-
-                            <TextBlock Text="MQTT Port" FontSize="14" Margin="0,10,0,5" Foreground="White"/>
-                            <TextBlock Text="{Binding MqttPort}" FontSize="12" Margin="0,0,0,10" Foreground="LightGray"/>
-
-                            <TextBlock Text="MQTT Username" FontSize="14" Margin="0,10,0,5" Foreground="White"/>
-                            <TextBlock Text="{Binding MqttUsername}" FontSize="12" Margin="0,0,0,10" Foreground="LightGray"/>
-
-                            <TextBlock Text="MQTT Password" FontSize="14" Margin="0,10,0,5" Foreground="White"/>
-                            <TextBlock Text="********" FontSize="12" Margin="0,0,0,10" Foreground="LightGray"/>
+                            <TextBlock Text="DSLR Booth Path" FontSize="14" Margin="0,10,0,5" Foreground="White"/>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+                                <TextBox Grid.Column="0" Text="{Binding DSLRBoothPath}" 
+                                         FontSize="12" 
+                                         Padding="5" 
+                                         Margin="0,0,10,0"/>
+                                <Button Grid.Column="1" Content="Pilih" 
+                                        Command="{Binding BrowseDSLRBoothPathCommand}" 
+                                        Width="60" 
+                                        Height="30"/>
+                            </Grid>
                         </StackPanel>
                     </GroupBox>
 
@@ -180,7 +180,7 @@
                                     Foreground="White"
                                     FontSize="14"
                                     Padding="10,5"
-                                    Margin="0,20,0,0"
+                                    Margin="0,20,0,10"
                                     HorizontalAlignment="Center">
                                 <Button.Style>
                                     <Style TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
@@ -188,6 +188,32 @@
                                             <Trigger Property="IsMouseOver" Value="True">
                                                 <Setter Property="Background" Value="#45a049"/>
                                             </Trigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </Button.Style>
+                            </Button>
+
+                            <Button Content="Activate Machine" 
+                                    Command="{Binding ActivateMachineCommand}"
+                                    FontSize="14"
+                                    Padding="10,5"
+                                    Margin="0,10,0,0"
+                                    HorizontalAlignment="Center">
+                                <Button.Style>
+                                    <Style TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
+                                        <Setter Property="Background" Value="#AB2424"/>
+                                        <Setter Property="Foreground" Value="White"/>
+                                        <Style.Triggers>
+                                            <Trigger Property="IsEnabled" Value="False">
+                                                <Setter Property="Background" Value="Gray"/>
+                                            </Trigger>
+                                            <MultiTrigger>
+                                                <MultiTrigger.Conditions>
+                                                    <Condition Property="IsMouseOver" Value="True"/>
+                                                    <Condition Property="IsEnabled" Value="True"/>
+                                                </MultiTrigger.Conditions>
+                                                <Setter Property="Background" Value="#CC2424"/>
+                                            </MultiTrigger>
                                         </Style.Triggers>
                                     </Style>
                                 </Button.Style>
